# VTMine-Framework

./: .gitignore  CMakeLists.txt  README.md
data/configs/: attendance_plugin_config.json  config1.cfg  min_config.json  readme.md  test_config.json
docs/spec/: README.md  cmd_params.md
framework/plugins/TestPlugin/: CMakeLists.txt  TestPlugin_global.h  testplugin.cpp  testplugin.h
framework/plugins/build-TestPlugin-main_kit-Debug/: CMakeCache.txt  Makefile  TestPlugin.cbp  cmake_install.cmake
framework/plugins/build-TestPlugin-main_kit-Debug/TestPlugin_autogen/: moc_predefs.h  mocs_compilation.cpp
framework/plugins/build-TestPlugin-main_kit-Debug/TestPlugin_autogen/EWIEGA46WW/: moc_testplugin.cpp
framework/src/: CMakeLists.txt  frameworkmdl.qmodel  main.cpp
framework/src/core/: CMakeLists.txt  app_starter.cpp  app_starter.h  baseunit.cpp  baseunit.h  cmd_line_params.cpp  cmd_line_params.h  framework.h  framework_def_impl.cpp  framework_def_impl.h  framework_settings.cpp  framework_settings.h  help_message.h  i_framework.h  iplugin.cpp  iplugin.h  logger.cpp  logger.h  plugin_manager.cpp  plugin_manager.h  streamlogger.cpp  streamlogger.h  textfilelogger.cpp  textfilelogger.h  utilities.h  vtmexception.cpp  vtmexception.h
framework/vtm_plugins/: attendance_plugin.json  test_plugin.json
src/: IFramework.h  Logger.h  MainWorker.cpp  MainWorker.h  PluginManager.h  app_starter.cpp  app_starter.cpp.autosave  app_starter.h  app_starter.h.autosave  cmd_line_params.cpp  cmd_line_params.h  cmd_line_params.h.autosave  framework_def_impl.h  framework_def_impl.h.autosave  framework_settings.h  i_framework.h  i_framework.h.autosave  logger.h  logger.h.autosave  main.cpp  plugin_manager.h
tasks/: app_params_parser.cpp  vtmine-tasks-for-20191121.txt
